# quant-bot-test

./: .env.example  .gitignore  README.md  app.py  backtest.py  backtest_original.py  backtest_vwap.py  backtest_슬리피지뺴먹음.py  backtest_이것저것.py  collector.py  indicators.py  pyproject.toml  test.py
config/: settings.py
docs/: upbit.md
scripts/: run_backtest.py
src/: __init__.py
src/backtest/: __init__.py  engine.py  metrics.py
src/exchanges/: __init__.py  base.py  upbit.py
src/indicators/: __init__.py  technical.py
src/models/: __init__.py  candle.py  order.py  signal.py
src/strategies/: __init__.py  base.py  ema_cross.py
src/trading/: __init__.py
